<resources>
    <string name="app_name" translatable="false">Echo</string>
    <string name="app_github_repo" translatable="false">brahmkshatriya/echo</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="feed">Feed</string>
    <string name="x_permission_required">%1$s Permission Required</string>
    <string name="x_was_not_granted">%1$s was not granted</string>
    <string name="audio">Audio</string>
    <string name="audio_permission_summary">To access your local music library</string>
    <string name="read_storage">Read Storage</string>
    <string name="write_storage">Write Storage</string>
    <string name="write_storage_permission_summary">To create and edit local playlists</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_permission_summary">To show notification for downloads and music</string>
    <string name="remove">Remove</string>
    <string name="more_by_x">More by %1$s</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="x_radio">%1$s Radio</string>
    <string name="cached_songs">Cached Songs</string>
    <string name="cache_playlist_warning">Experimental Feature. Anything except listening to them is not supported.</string>
    <string name="artists">Artists</string>
    <string name="recently_added">Recently Added</string>
    <string name="refresh_library_on_reload">Refresh Library on Reload</string>
    <string name="refresh_library_on_reload_summary">Scan the device every time the feed is loaded</string>
    <string name="duration_filter">Duration Filter</string>
    <string name="duration_filter_summary">Filter out audio files with duration(in seconds) less than the value</string>
    <string name="blacklist_folders">Blacklist Folders</string>
    <string name="blacklist_folders_summary">Folders to exclude from the library</string>
    <string name="blacklist_folder_keywords">Blacklist Folder Keywords</string>
    <string name="blacklist_folder_keywords_summary">Keywords to blacklist folders, use comma for separator</string>
    <string name="artist_exclusions">Artist exclusions</string>
    <string name="artist_exclusions_summary">Pipe-separated list of artist names that should not be split (use “|”)</string>
    <string name="saved">Saved</string>
    <string name="tabs">Tabs</string>
    <string name="show_tabs">Show Tabs</string>
    <string name="show_tab_summary">will show tabs of the extensions as category</string>
    <string name="unified_liked_playlist_summary">Your liked tracks from various extensions</string>
    <string name="n_items">%1$d Items</string>
    <string name="item">Item</string>
    <plurals name="number_items">
        <item quantity="one">%1$d Item</item>
        <item quantity="other">%1$d Items</item>
    </plurals>
    <string name="playlist_liked">Liked</string>
    <string name="playlist_liked_desc">Your liked tracks</string>
    <string name="unknown">Unknown</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="repeat_one">Repeat One</string>
    <string name="repeat_off">Repeat Off</string>
    <string name="repeat_all">Repeat All</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="more">More</string>
    <string name="extension">Extension</string>
    <string name="downloading_x">Downloading %1$s</string>
    <string name="cancel_all">Cancel All</string>
    <string name="download_progress">Download Progress</string>
    <string name="downloads">Downloads</string>
    <string name="downloaded_x">Downloaded %1$s</string>
    <string name="logout_and_login">Logout and Login</string>
    <string name="login">Login</string>
    <string name="view">View</string>
    <string name="extension_out_of_date">Out of date</string>
    <string name="no_internet">No Internet</string>
    <string name="error_loading_extension_from_x">Error loading extension from %1$s</string>
    <string name="extension_x_not_found">Extension %1$s not found</string>
    <string name="required_extensions_missing_x">Required extensions missing: %1$s</string>
    <string name="x_login_required">%1$s login required</string>
    <string name="x_is_not_supported_in_x">%1$s is not supported in %2$s</string>
    <string name="account_session_expired_in_x">Account session expired in %1$s</string>
    <string name="error_x">Error: %1$s</string>
    <string name="str_copy">Copy</string>
    <string name="extensions">Extensions</string>
    <string name="choose_a_color">Choose a color</string>
    <string name="random">Random</string>
    <string name="add">Add</string>
    <string name="loading">Loading…</string>
    <string name="settings">Settings</string>
    <string name="value">Value</string>
    <string name="value_not_set">Not Set</string>
    <string name="playback">Playback</string>
    <string name="audio_fx">Audio Effects</string>
    <string name="audio_fx_summary">Effects applied for all songs</string>
    <string name="audio_fx_desc">Change the audio effects for the current track.</string>
    <string name="reset">Reset</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="change_pitch_with_speed">Change pitch with speed</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="bass_boost_desc">Larger value may distort the sound.</string>
    <string name="change_pitch_with_speed_desc">Get that slow-motion sound</string>
    <string name="equalizer">Equalizer</string>
    <string name="equalizer_summary">Open the device equalizer settings</string>
    <string name="stream_quality">Stream Quality</string>
    <string name="stream_quality_summary">Select the default quality of the stream</string>
    <string name="x_specific_quality_summary">%1$s specific stream quality, will override the default stream quality selection</string>
    <string-array name="stream_qualities">
        <item>Highest</item>
        <item>Medium</item>
        <item>Lowest</item>
    </string-array>
    <string name="unmetered_stream_quality">Unmetered Stream Quality</string>
    <string name="unmetered_stream_quality_summary">The quality of the stream when connected to an unmetered network. This will override the default stream quality.</string>
    <string name="behavior">Behavior</string>
    <string name="keep_queue">Keep Player Queue</string>
    <string name="keep_queue_summary">Recover the player queue, when you reopen the app.</string>
    <string name="stop_player">Stop player</string>
    <string name="stop_player_summary">Stop the player, when the app is removed from recents</string>
    <string name="skip_silence">Skip Silence</string>
    <string name="skip_silence_summary">Skip silent part in the song, to provide gapless playback.</string>
    <string name="auto_start_radio">Auto Start Radio</string>
    <string name="auto_start_radio_summary">Automatically add related songs of track in the playlist, to have an infinite queue</string>
    <string name="cache_size">Cache Size</string>
    <string name="cache_size_summary">Size in MB to cache audio and video</string>
    <string name="version">Version</string>
    <string name="select_language">Select Language</string>
    <string name="system">System</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="check_for_updates_summary">Look for new updates of both app and extensions, when you open the app.</string>
    <string name="install">Install</string>
    <string name="app">App</string>
    <string name="file">File</string>
    <string name="installation_type">Installation Type</string>
    <string name="installation_type_summary">App installation will allow the following links to open in Echo:</string>
    <string name="installation_type_warning">Not available if you install the extension as a File.</string>
    <string name="could_not_find_the_file">Could not find the file.</string>
    <string name="extension_installer">Extension Installer</string>
    <string name="extension_installed_successfully">Extension installed successfully.</string>
    <string name="extension_uninstalled_successfully">Extension uninstalled successfully.</string>
    <string name="allow_opening_links">Allow opening links</string>
    <string name="open_links_instruction">To allow opening these links, you need to:\n- Scroll down and click on \"Open by Default\"\n- Click on \"+ Add Link\"</string>
    <string name="downloading_update_for_x">Downloading update for %1$s</string>
    <string name="extension_updated_successfully">%1$s updated successfully</string>
    <string name="link">Link</string>
    <string name="link_or_code">Link or Code</string>
    <string name="list_is_empty">List is empty</string>
    <string name="extension_installed">%1$s (Installed)</string>
    <string name="add_extensions">Add Extensions</string>
    <string name="invalid_extension_list">Invalid extensions list</string>
    <string name="checking_for_updates">Checking for updates</string>
    <string name="look_and_feel">Look and Feel</string>
    <string name="ui">UI</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Want to be blind?</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string name="custom_theme_color">Custom Theme Color</string>
    <string name="custom_theme_color_summary">Use a custom theme color, instead of system theme.</string>
    <string name="add_color">Add color</string>
    <string name="custom_colors">Custom Colors</string>
    <string name="amoled">AMOLED</string>
    <string name="amoled_summary">Pitch Black, Pure Black</string>
    <string name="navbar_gradient">Gradient Navbar</string>
    <string name="navbar_gradient_summary">Navbar gradually becomes transparent</string>
    <string name="dynamic_player">Dynamic Player Color</string>
    <string name="dynamic_player_summary">Apply color to the player based on the Track Artwork</string>
    <string name="show_background">Show Background</string>
    <string name="show_background_summary">Background video or blurred artwork of track in player</string>
    <string name="colors">Colors</string>
    <string name="scroll_bar">Scroll Bar</string>
    <string name="scroll_bar_summary">Scrollbar on the side for faster access (might be glitchy)</string>
    <string name="animation">Animation</string>
    <string name="back_animations">Back Animations</string>
    <string name="back_animations_summary">Can cause visual bug due to android, but you can just open recents to fix it.</string>
    <string name="animations">Animations</string>
    <string name="animations_summary">Feeling too much stutter? turning this off, might help</string>
    <string name="other">Other</string>
    <string name="player">Player</string>
    <string name="language_x">Language: %1$s</string>
    <string name="guide">Guide</string>
    <string name="donate">Donate</string>
    <string name="contributors">Contributors</string>
    <string name="no_account">No Account</string>
    <string name="listen_together">Listen Together</string>
    <string name="listen_together_create">Buat Sesi</string>
    <string name="listen_together_join">Gabung Sesi</string>
    <string name="listen_together_code_hint">Masukkan kode 6 digit</string>
    <string name="listen_together_copy">Salin Kode</string>
    <string name="listen_together_leave">Tinggalkan Sesi</string>
    <string name="listen_together_settings">Listen Together</string>
    <string name="listen_together_profile">Profil Listen Together</string>
    <string name="listen_together_username">Username</string>
    <string name="listen_together_save">Simpan</string>
</resources>